# NextCraftTalk

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  bandit-report-full.json  bandit-report.json  main.py  pyproject.toml  requirements-external.txt  requirements-selfhosted.txt  requirements.txt  test-trigger-fixed.txt  test-trigger.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml  security-report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  dependency-review.yml  discord-release-notifier.yml  release.yml  secret-scan.yml  security-advisory-check.yml  security-audit.yml
docker/external_ai/: Dockerfile  docker-compose.yml
docker/self_hosted/: Dockerfile  docker-compose.yml
docs/: SECURITY_EMAIL_MONITORING.md  external_ai_readme.md
docs/wiki/: Home.md  Makefile-Commands-&-Scenarios.md  NextCraftTalk-Overview.md  Nextcloud-Talk-Configuration.md  Ollama-Setup-Guide.md  Project-Documentation.md  Release-Automation-Guide.md  Semantic-Versioning-Guide.md  xAI-API-Usage.md
scripts/: deploy.sh  version_manager.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py
src/modes/external_ai/: __init__.py  main.py
src/modes/external_ai/bot/: __main__.py  api.py  security.py
src/modes/external_ai/core/: config.py
src/modes/external_ai/xai/: pipeline.py
src/modes/self_hosted/: __init__.py  main.py  main_clean.py
src/modes/self_hosted/bot/: __main__.py  api.py  nextcloud_api.py  security.py
src/modes/self_hosted/core/: config.py
src/modes/self_hosted/ollama/: __init__.py  client.py
src/modes/self_hosted/rag/: __init__.py  pipeline.py
src/modes/self_hosted/scraping/: __init__.py  wiki_scraper.py
src/shared/: __init__.py  safety_filter.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_utils.py
